--- a/public/modutalk.html
+++ b/public/modutalk.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Helios by HTML5 UP</title>
+		<title>ModuTalk - Choi Do Kyung</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,27 +29,27 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+<!--								<li>-->
+<!--									<a href="#">Dropdown</a>-->
+<!--									<ul>-->
+<!--										<li><a href="#">Lorem ipsum dolor</a></li>-->
+<!--										<li><a href="#">Magna phasellus</a></li>-->
+<!--										<li><a href="#">Etiam dolore nisl</a></li>-->
+<!--										<li>-->
+<!--											<a href="#">And a submenu &hellip;</a>-->
+<!--											<ul>-->
+<!--												<li><a href="#">Lorem ipsum dolor</a></li>-->
+<!--												<li><a href="#">Phasellus consequat</a></li>-->
+<!--												<li><a href="#">Magna phasellus</a></li>-->
+<!--												<li><a href="#">Etiam dolore nisl</a></li>-->
+<!--											</ul>-->
+<!--										</li>-->
+<!--										<li><a href="#">Veroeros feugiat</a></li>-->
+<!--									</ul>-->
+<!--								</li>-->
+<!--								<li><a href="left-sidebar.html">Left Sidebar</a></li>-->
+								<li><a href="profile.html">Profile</a></li>
+								<li><a href="about.html">About</a></li>
 							</ul>
 						</nav>
 
@@ -66,220 +66,227 @@
 									파이어베이스 기반 메신저
 								</p>
 							</header>
-							<a href="#" class="image featured"><img src="images/modutalk/sample1.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/modutalk/sample3.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/modutalk/sample4.jpg" alt="" /></a>
+
 							<p>
-								Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-								posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-								lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-								consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-								interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-								natoque aenean scelerisque vel lacinia mollis quam sodales congue.
+								모두와 대화할 수 있는 카카오톡을 만들어보고 싶었습니다,
+								개발기간을 단축하기 위해서 FireBase Cloud Database 를 이용하였습니다.
+								아래는 FireBase 에 대한 기능 설명입니다.
 							</p>
+
 							<section>
-								<header>
-									<h3>Ultrices tempor sagittis nisl</h3>
-								</header>
+								<a class="image featured"><img src="images/modutalk/fb1.jpg" alt="" /></a>
 								<p>
-									Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-									at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-									fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+									스토리지의 용량을 가변적으로 설정할 수 있고 , 폴더별로 정리해 직관적으로 볼 수 있게 설계했습니다.
 								</p>
+							</section>
+
+							<section>
+								<a class="image featured"><img src="images/modutalk/fb2.jpg" alt="" /></a>
 								<p>
-									Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-									orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-									ut penatibus fermentum nibh erat malesuada varius.
+									기존의 DB와 달리 컬렉션 구조로 이루어져 있어서 직관적이고 간편하여 수월하게 DB를 관리할 수 있습니다.
+								</p>
+							</section>
+
+							<section>
+								<a class="image featured"><img src="images/modutalk/fb3.jpg" alt="" /></a>
+								<p>
+									간단한 코드로 사용자별 권한을 설정할 수 있고 보안을 강화할 수 있습니다.
 								</p>
 							</section>
 							<section>
 								<header>
-									<h3>Augue euismod feugiat tempus</h3>
+									<h3>시연 이미지1</h3>
 								</header>
+								<a class="image featured"><img src="images/modutalk/modu1.jpg" alt="" /></a>
+
 								<p>
-									Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-									ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+									좌측 이미지가 친구목록입니다, 친구목록과 채팅방 또는 프로필 설정을 스와이프해서 이동하게끔 구현했습니다.
+									대화하고 싶은 유저를 클릭하여 메세지를 전송할 수 있고,
+									친구 목록 창에서는 사용자가 수정한 대화명 혹은 프로필 사진이 실시간으로 업데이트되어 나타납니다.
+								</p>
+								<p>
+									우측 이미지는 대화목록입니다, 실시간으로 받은 메시지를 확인할 수 있으며 알림이 유저에게 전달됩니다.
+									메시지를 클릭해 대화방에 들어가면 알림 카운트는 제거되며 카카오톡처럼 상대방에게 1이 사라지게 됩니다.
+									친구목록과 마찬가지로 대화목록 창에서도 상대방이 설정한 프로필 사진을 확인할 수 있습니다.
+								</p>
+							</section>
+							<section>
+								<header>
+									<h3>시연 이미지2</h3>
+								</header>
+								<a class="image featured"><img src="images/modutalk/sample2.jpg" alt="" /></a>
+
+								<p>
+									좌측 이미지는 프로필 설정 화면입니다, 프로필 사진을 클릭하여 갤러리에 있는 사진을 불러와 적용하게끔
+									구현했으며 언제든 원하는 이미지로 수정이 가능합니다.수정 후 프로필 저장하기를 클릭하면 친구목록에 업데이트된
+									프로필이 노출됩니다. 비밀번호 변경은 현재 비밀번호를 입력 후 변경할 비밀번호를 입력하여 변경할 수 있습니다.
+								</p>
+								<p>
+									우측 이미지는 멀티채팅방 화면입니다, 팝업버튼을 이용해 원하는 유저를 선택하여 대화방에 초대할 수 있으며
+									실시간으로 알림을 확인할 수 있고 어떤 유저가 읽었는지 알 수 있습니다. 우측 상단에 버튼을 누르면
+									다른 상대방도 채팅방에 초대해 대화를 나눌 수 있습니다.
 								</p>
 							</section>
 						</article>
 						<hr />
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3><a href="https://github.com/tolod/MT2">Git</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									모두의 톡 Github 입니다 , Git 클릭 시 이동 됩니다.
+								</p>
+								<p>
+									주소:<a href="https://github.com/tolod/MT2">https://github.com/tolod/MT2</a>
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=yopy.modutalk">PlayStore</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									모두의 톡 PlayStore 입니다 , PlayStore 클릭 시 이동 됩니다.(현재 FireBase 서버는 내렸습니다.)
 								</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
-								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									주소:<a href="https://play.google.com/store/apps/details?id=yopy.modutalk">https://play.google.com/store/apps/details?id=yopy.modutalk</a>
 								</p>
 							</article>
+
 						</div>
 					</div>
 
 				</div>
 
 			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
+			<div id="footer">
+				<div class="container">
+<!--					<div class="row">-->
 
-							<!-- Tweets -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon brands fa-twitter circled"><span class="label">Tweets</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="tweet">
-												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-												<span class="timestamp">5 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Hendrerit rutrum quisque.
-												<span class="timestamp">30 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
-												<span class="timestamp">5 hours ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
+<!--						&lt;!&ndash; Tweets &ndash;&gt;-->
+<!--						<section class="col-4 col-12-mobile">-->
+<!--							<header>-->
+<!--								<h2 class="icon brands fa-twitter circled"><span class="label">Tweets</span></h2>-->
+<!--							</header>-->
+<!--							<ul class="divided">-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										티스토리에도 공부하는 것을 정리하고 있습니다.-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										주로 초기 설정법이나 , 개념을 요약하고 있습니다.-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										아직은 초라하지만 하나하나 정리하려고 노력하려고 합니다.-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										주소 : <a href="https://yopy.tistory.com/">https://yopy.tistory.com/</a>-->
+<!--									</article>-->
+<!--								</li>-->
+<!--							</ul>-->
+<!--						</section>-->
 
-							<!-- Posts -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Nisl fermentum integer</a></h3>
-												</header>
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Phasellus portitor lorem</a></h3>
-												</header>
-												<span class="timestamp">6 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Magna tempus consequat</a></h3>
-												</header>
-												<span class="timestamp">Yesterday</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Feugiat lorem ipsum</a></h3>
-												</header>
-												<span class="timestamp">2 days ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
+<!--						&lt;!&ndash; Posts &ndash;&gt;-->
+<!--						<section class="col-4 col-12-mobile">-->
+<!--							<header>-->
+<!--								<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>-->
+<!--							</header>-->
+<!--							<ul class="divided">-->
+<!--								<li>-->
+<!--									<article class="post stub">-->
+<!--										<header>-->
+<!--											<h3>오른쪽 이미지는 자바로 만든 갤러그 입니다.</h3>-->
+<!--										</header>-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="post stub">-->
+<!--										<header>-->
+<!--											<h3>TCP 통신을 이용하여 유저와 같이 즐기도록 구현했습니다.</h3>-->
+<!--										</header>-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="post stub">-->
+<!--										<header>-->
+<!--											<h3>이 미니프로젝트를 하면서 스레드에 대한 이해도가 높아졌습니다.</h3>-->
+<!--										</header>-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="post stub">-->
+<!--										<header>-->
+<!--											<h3>대기실과 방을 구현했으며 실시간으로 멀티채팅이 가능하며, 비행기의 좌표값을 서버에서 받아옵니다.</h3>-->
+<!--										</header>-->
+<!--									</article>-->
+<!--								</li>-->
+<!--							</ul>-->
+<!--						</section>-->
 
-							<!-- Photos -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>
-									</header>
-									<div class="row gtr-25">
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
+<!--						&lt;!&ndash; Photos &ndash;&gt;-->
+<!--						<section class="col-4 col-12-mobile">-->
+<!--							<header>-->
+<!--								<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>-->
+<!--							</header>-->
+<!--							<div class="row gtr-25">-->
+<!--								<div class="col-6">-->
+<!--									<a class="image fit"><img src="images/mini/mini0.jpg" alt="" /></a>-->
+<!--								</div>-->
+<!--								<div class="col-6">-->
+<!--									<a class="image fit"><img src="images/mini/mini2.jpg" alt="" /></a>-->
+<!--								</div>-->
+<!--								<div class="col-6">-->
+<!--									<a class="image fit"><img src="images/mini/mini1.jpg" alt="" /></a>-->
+<!--								</div>-->
+<!--								<div class="col-6">-->
+<!--									<a class="image fit"><img src="images/mini/mini3.jpg" alt="" /></a>-->
+<!--								</div>-->
+<!--								<div class="col-6">-->
+<!--									<a class="image fit"><img src="images/mini/mini5.jpg" alt="" /></a>-->
+<!--								</div>-->
+<!--								<div class="col-6">-->
+<!--									<a class="image fit"><img src="images/mini/mini6.jpg" alt="" /></a>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</section>-->
 
-						</div>
-						<hr />
-						<div class="row">
-							<div class="col-12">
+<!--					</div>-->
+					<hr />
+					<div class="row">
+						<div class="col-12">
 
-								<!-- Contact -->
-									<section class="contact">
-										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
-										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
-										<ul class="icons">
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-										</ul>
-									</section>
+							<!-- Contact -->
+							<section class="contact">
+								<ul class="icons">
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+									<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+								</ul>
+							</section>
 
-								<!-- Copyright -->
-									<div class="copyright">
-										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
-									</div>
-
+							<!-- Copyright -->
+							<div class="copyright">
+								<ul class="menu">
+									<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								</ul>
 							</div>
 
 						</div>
+
 					</div>
 				</div>
+			</div>
 
 		</div>
 
