--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
+								<!--
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
@@ -51,10 +52,9 @@
 										</li>
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								</li>-->
+								<li><a href="profile.html">Profile</a></li>
+								<li><a href="about.html">About</a></li>
 							</ul>
 						</nav>
 
@@ -73,7 +73,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="modutalk.html" class="image featured"><img src="images/modutalk/icon.png" alt="" /></a>
+							<a href="modutalk.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
 								<h3><a href="modutalk.html">모두의 톡</a></h3>
 							</header>
@@ -81,7 +81,7 @@
 						</article>
 
 						<article>
-							<a href="aesook.html" class="image featured"><img src="images/aesook/main1.jpg" alt="" /></a>
+							<a href="aesook.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
 								<h3><a href="aesook.html">애숙</a></h3>
 							</header>
@@ -97,26 +97,21 @@
 				<div class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a class="image featured"><img src="images/profile/pic123.jpg" alt="" /></a>
+
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
+							<h2><a href="#">저를 소개합니다.</a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								저는 개발에 있어서만큼은 진중한 편 입니다. 코드를 구성하게 될 때에도 어떤 방식이 더 추세에 맞고 보기에 깨끗한지 항상 노력하고
+								생각합니다.언어에 갇히지 않으려고 합니다, 어떤 언어라도 받아들일 준비가 되어있습니다.
 							</p>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							개발을 할 때 누군가에게 도움 또는 기쁨을 주게 되는 것이 개발자의 매력이라고 생각합니다.그렇기 때문에 저는 항상 누군가를 도울수있거나
+							기쁨을 주는 프로그래머가 되고 싶습니다.
 						</p>
 						<footer>
-							<a href="#" class="button">Continue Reading</a>
+							<a href="profile.html" class="button">Continue Reading</a>
 						</footer>
 					</article>
 
@@ -126,39 +121,41 @@
 				<div class="wrapper style1">
 
 					<section id="features" class="container special">
-						<header>
-							<h2>Morbi ullamcorper et varius leo lacus</h2>
-							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
-						</header>
+
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+<!--								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>-->
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3><a href="#">Github</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									개인 프로젝트 : <a href="https://github.com/tolod">https://github.com/tolod</a>
+								</p>
+								<p>
+									팀 프로젝트 : <a href="https://github.com/yopyzzang">https://github.com/yopyzzang</a>
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+<!--								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>-->
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3><a href="https://yopy.tistory.com/">Tistory</a></h3>
 								</header>
+								<p>공부한 것들을 정리하고자 만든 티스토리 블로그 입니다. 주요 개념이나 사용법들을 포스팅 해놓았습니다.
+								</p>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									주소:<a href="https://yopy.tistory.com/">https://yopy.tistory.com/</a>
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+<!--								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>-->
 								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+									<h3><a href="https://play.google.com/store/apps/details?id=yopy.modutalk">PlayStore</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									안드로이드 기반 모두의 톡 플레이스토어입니다.
+								</p>
+								<p>
+									주소:<a href="https://play.google.com/store/apps/details?id=yopy.modutalk">https://play.google.com/store/apps/details?id=yopy.modutalk</a>
 								</p>
 							</article>
 						</div>
@@ -167,144 +164,74 @@
 				</div>
 
 			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
+			<div id="footer">
+				<div class="container">
+					<div class="row">
 
-							<!-- Tweets -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon brands fa-twitter circled"><span class="label">Tweets</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="tweet">
-												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-												<span class="timestamp">5 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Hendrerit rutrum quisque.
-												<span class="timestamp">30 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
-												<span class="timestamp">5 hours ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
+						<!-- Tweets -->
+<!--						<section class="col-4 col-12-mobile">-->
+<!--							<header>-->
+<!--								<h2 class="icon brands fa-blogger circled"><span class="label">Tweets</span></h2>-->
+<!--							</header>-->
+<!--							<ul class="divided">-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										티스토리에 공부하는 것을 정리하고 있습니다.-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										주로 초기 설정법이나, 개념을 요약하고 있습니다.-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										공부한 내용들을 모두 정리하려하고 있습니다.-->
+<!--									</article>-->
+<!--								</li>-->
+<!--								<li>-->
+<!--									<article class="tweet">-->
+<!--										주소 : <a href="https://yopy.tistory.com/">https://yopy.tistory.com/</a>-->
+<!--									</article>-->
+<!--								</li>-->
+<!--							</ul>-->
+<!--						</section>-->
 
-							<!-- Posts -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Nisl fermentum integer</a></h3>
-												</header>
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Phasellus portitor lorem</a></h3>
-												</header>
-												<span class="timestamp">6 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Magna tempus consequat</a></h3>
-												</header>
-												<span class="timestamp">Yesterday</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Feugiat lorem ipsum</a></h3>
-												</header>
-												<span class="timestamp">2 days ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
+						<!-- Posts -->
 
-							<!-- Photos -->
-								<section class="col-4 col-12-mobile">
-									<header>
-										<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>
-									</header>
-									<div class="row gtr-25">
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
 
-						</div>
-						<hr />
-						<div class="row">
-							<div class="col-12">
+						<!-- Photos -->
 
-								<!-- Contact -->
-									<section class="contact">
-										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
-										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
-										<ul class="icons">
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-										</ul>
-									</section>
 
-								<!-- Copyright -->
-									<div class="copyright">
-										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-										</ul>
-									</div>
+					</div>
+					<hr />
+					<div class="row">
+						<div class="col-12">
 
+							<!-- Contact -->
+							<section class="contact">
+								<ul class="icons">
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+									<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+								</ul>
+							</section>
+
+							<!-- Copyright -->
+							<div class="copyright">
+								<ul class="menu">
+									<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								</ul>
 							</div>
 
 						</div>
+
 					</div>
 				</div>
+			</div>
 
 		</div>
 
